Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-486

[C++] arrow::io::MemoryMappedFile can't be casted to arrow::io::FileInterface

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.2.0
    • 0.2.0
    • C++
    • None
    • Linux

    Description

      arrow::io::ReadWriteFileInterface inheritances arrow::io::FileInterface
      as diamond style via:

      • ReadableFileInterface -> InputStream -> FileInterface
      • WriteableFileInterface -> OutputStream -> FileInterface

      If we have diamond inheritance, we can't cast subclasses of
      arrow::io::ReadWriteFileInterface such as arrow::io::MemoryMappedFile to
      arrow::io::FileInterface.

      C++:

      #include <arrow/io/file.h>

      int
      main(void)

      { std::shared_ptr<arrow::io::MemoryMappedFile> memory_mapped_file; std::shared_ptr<arrow::io::FileInterface> file = memory_mapped_file; return 0; }

      Build result:

      a.cc: In function 'int main()':
      a.cc:8:52: error: conversion from 'std::shared_ptr<arrow::io::MemoryMappedFile>' to non-scalar type 'std::shared_ptr<arrow::io::FileInterface>' requested
      std::shared_ptr<arrow::io::FileInterface> file = memory_mapped_file;
      ^~~~~~~~~~~~~~~~~~

      We can resolve it by using virtual inheritance.

      Attachments

        Activity

          People

            kou Kouhei Sutou
            kou Kouhei Sutou
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: